force-app/main/default/objects/Application__c/fields/Amount_intakes__c.field-meta.xml
<CustomField>
    <fullName>Amount_intakes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount intakes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>