force-app/main/default/objects/Application__c/fields/Amount_of_intakes__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_intakes__c</fullName>
    <label>Amount of intakes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>