force-app/main/default/objects/Application__c/fields/Available_from__c.field-meta.xml
<CustomField>
    <fullName>Available_from__c</fullName>
    <label>Available from</label>
    <type>Date</type>
</CustomField>