force-app/main/default/objects/Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Candidate_for_applications</relationshipName>
    <type>Lookup</type>
</CustomField>