force-app/main/default/objects/Application__c/fields/Candidate_name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_name__c</fullName>
    <formula>Candidate__r.First_name__c + &apos; &apos; + IF(ISBLANK( Candidate__r.Preposition__c ), &apos;&apos;, Candidate__r.Preposition__c + &apos; &apos;) +  Candidate__r.Last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate name</label>
    <type>Text</type>
</CustomField>