force-app/main/default/objects/Application__c/fields/Clarification_approval_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Clarification_approval_hiring_desk__c</fullName>
    <description>Short explanation of why hiring desk has sent an application through to hiring manager</description>
    <label>Clarification approval hiring desk</label>
    <length>250</length>
    <type>Text</type>
</CustomField>