force-app/main/default/objects/Application__c/fields/Clarification_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Clarification_hiring_desk__c</fullName>
    <description>Hiring desk uses this field to write comments to either hiring manager or vendor based on Send_to_hiring_manager field.</description>
    <inlineHelpText>Provide additional clarification to either vendor or hiring manager about the reasons for advancing or rejecting an application</inlineHelpText>
    <label>Clarification hiring desk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>