force-app/main/default/objects/Application__c/fields/Clarification_rejection_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Clarification_rejection_hiring_desk__c</fullName>
    <description>Reason/clarification sent to Vendor if application is rejected</description>
    <label>Clarification rejection hiring desk</label>
    <length>250</length>
    <type>Text</type>
</CustomField>