force-app/main/default/objects/Application__c/fields/Comments_on_second_intake__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_second_intake__c</fullName>
    <label>Comments on second intake</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>