force-app/main/default/objects/Application__c/fields/Desired_rate__c.field-meta.xml
<CustomField>
    <fullName>Desired_rate__c</fullName>
    <label>Desired rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>