force-app/main/default/objects/Application__c/fields/Editable_for_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Editable_for_hiring_desk__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;New&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Editable for hiring desk</label>
    <type>Checkbox</type>
</CustomField>