force-app/main/default/objects/Application__c/fields/Extra_information_most_recent_intake__c.field-meta.xml
<CustomField>
    <fullName>Extra_information_most_recent_intake__c</fullName>
    <label>Extra information most recent intake</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>