force-app/main/default/objects/Application__c/fields/First_intake_date__c.field-meta.xml
<CustomField>
    <fullName>First_intake_date__c</fullName>
    <label>First intake date</label>
    <type>DateTime</type>
</CustomField>