force-app/main/default/objects/Application__c/fields/Has_placement__c.field-meta.xml
<CustomField>
    <fullName>Has_placement__c</fullName>
    <formula>NOT(ISBLANK( Placement__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has placement</label>
    <type>Checkbox</type>
</CustomField>