force-app/main/default/objects/Application__c/fields/Hiring_manager_associated_position__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager_associated_position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring manager associated position</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>