force-app/main/default/objects/Application__c/fields/Hours_available__c.field-meta.xml
<CustomField>
    <fullName>Hours_available__c</fullName>
    <inlineHelpText>Hours candidate is available to work per week</inlineHelpText>
    <label>Hours available</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>