force-app/main/default/objects/Application__c/fields/Invitation_intake_sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_intake_sent__c</fullName>
    <label>Invitation intake sent</label>
    <type>DateTime</type>
</CustomField>