force-app/main/default/objects/Application__c/fields/Is_preferred_candidate__c.field-meta.xml
<CustomField>
    <fullName>Is_preferred_candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is preferred candidate</label>
    <type>Checkbox</type>
</CustomField>