force-app/main/default/objects/Application__c/fields/IsGebruikerInhurendManager__c.field-meta.xml
<CustomField>
    <fullName>IsGebruikerInhurendManager__c</fullName>
    <formula>OwnerId  == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGebruikerInhurendManager</label>
    <type>Checkbox</type>
</CustomField>