force-app/main/default/objects/Application__c/fields/IsUserHiringManager__c.field-meta.xml
<CustomField>
    <fullName>IsUserHiringManager__c</fullName>
    <formula>OwnerId  == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is user hiring manager</label>
    <type>Checkbox</type>
</CustomField>