force-app/main/default/objects/Application__c/fields/Latest_intake_date__c.field-meta.xml
<CustomField>
    <fullName>Latest_intake_date__c</fullName>
    <label>Latest intake date</label>
    <type>DateTime</type>
</CustomField>