force-app/main/default/objects/Application__c/fields/Offer_accepted_date__c.field-meta.xml
<CustomField>
    <fullName>Offer_accepted_date__c</fullName>
    <label>Offer accepted date</label>
    <type>DateTime</type>
</CustomField>