force-app/main/default/objects/Application__c/fields/Planned_intake__c.field-meta.xml
<CustomField>
    <fullName>Planned_intake__c</fullName>
    <label>Planned intake</label>
    <type>DateTime</type>
</CustomField>