force-app/main/default/objects/Application__c/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is filled if we got to the stage where a placement was requested and the vendor provided additional information</description>
    <inlineHelpText>Field is filled if we got to the stage where a placement was requested and the vendor provided additional information</inlineHelpText>
    <label>Professional</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Professional)</relationshipLabel>
    <relationshipName>Professional_for_applications</relationshipName>
    <type>Lookup</type>
</CustomField>