force-app/main/default/objects/Application__c/fields/Reason_recall__c.field-meta.xml
<CustomField>
    <fullName>Reason_recall__c</fullName>
    <label>Reason recall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Took_another_position</fullName>
                <label>Took another position</label>
            </value>
            <value>
                <fullName>Candidate_is_sick</fullName>
                <label>Candidate is sick</label>
            </value>
            <value>
                <fullName>No_longer_interested</fullName>
                <label>No longer interested</label>
            </value>
            <value>
                <fullName>Other, which is :</fullName>
            </value>
            <value>
                <fullName>Reason1</fullName>
                <isActive>false</isActive>
                <label>Reason1</label>
            </value>
            <value>
                <fullName>Reason2</fullName>
                <isActive>false</isActive>
                <label>Reason2</label>
            </value>
            <value>
                <fullName>Reason3</fullName>
                <isActive>false</isActive>
                <label>Reason3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>