force-app/main/default/objects/Application__c/fields/Reason_rejection_hd_editable__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection_hd_editable__c</fullName>
    <formula>NOT(ISPICKVAL(Send_to_hiring_manager__c, &apos;No&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason rejection hd editable</label>
    <type>Checkbox</type>
</CustomField>