force-app/main/default/objects/Application__c/fields/Reason_rejection_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection_hiring_desk__c</fullName>
    <description>Reason for rejection by hiring desk</description>
    <label>Reason for rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_rejection_hiring_desk</valueSetName>
    </valueSet>
</CustomField>