force-app/main/default/objects/Application__c/fields/Reason_rejection_hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection_hiring_manager__c</fullName>
    <description>Reason for rejection by hiring manager</description>
    <label>Reason for rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_rejection_hiring_manager</valueSetName>
    </valueSet>
</CustomField>