force-app/main/default/objects/Application__c/fields/Reason_rejection_hiring_manager_other__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection_hiring_manager_other__c</fullName>
    <label>Reason rejection hiring manager other</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>