force-app/main/default/objects/Application__c/fields/Reason_rejection_other_hiring_desk__c.field-meta.xml
<CustomField>
    <fullName>Reason_rejection_other_hiring_desk__c</fullName>
    <label>Other, namely</label>
    <length>250</length>
    <type>Text</type>
</CustomField>