force-app/main/default/objects/Application__c/fields/Reason_withdrawn_other__c.field-meta.xml
<CustomField>
    <fullName>Reason_withdrawn_other__c</fullName>
    <label>Reason withdrawn other</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>