force-app/main/default/objects/Application__c/fields/Recall_reason_other__c.field-meta.xml
<CustomField>
    <fullName>Recall_reason_other__c</fullName>
    <label>Recall reason other</label>
    <type>TextArea</type>
</CustomField>