force-app/main/default/objects/Application__c/fields/Rejection_reason_clarification_hd__c.field-meta.xml
<CustomField>
    <fullName>Rejection_reason_clarification_hd__c</fullName>
    <label>Rejection reason clarification hd</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>