force-app/main/default/objects/Application__c/fields/Review_score__c.field-meta.xml
<CustomField>
    <fullName>Review_score__c</fullName>
    <inlineHelpText>Please review how well the candidate&apos;s skillset and personality match the position they were offered for</inlineHelpText>
    <label>Review score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_list</valueSetName>
    </valueSet>
</CustomField>