force-app/main/default/objects/Application__c/fields/Second_intake_date__c.field-meta.xml
<CustomField>
    <fullName>Second_intake_date__c</fullName>
    <label>Second intake date</label>
    <type>DateTime</type>
</CustomField>