force-app/main/default/objects/Application__c/fields/Send_to_hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Send_to_hiring_manager__c</fullName>
    <description>Internal field for hiring desk to keep track of applicants they like or dislike</description>
    <inlineHelpText>Indicate whether you intend to send an applicant to the next stage. For internal use only.</inlineHelpText>
    <label>Send to hiring manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>