force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake requested</fullName>
            </value>
            <value>
                <fullName>Intake planned</fullName>
            </value>
            <value>
                <fullName>Intake done</fullName>
            </value>
            <value>
                <fullName>Position offered</fullName>
            </value>
            <value>
                <fullName>Position not offered</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Position not accepted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Sent to hiring manager</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Candidate withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Placement requested</fullName>
            </value>
            <value>
                <fullName>Information requested for placement</fullName>
            </value>
            <value>
                <fullName>Invited for intake</fullName>
                <isActive>false</isActive>
                <label>Invited for intake</label>
            </value>
            <value>
                <fullName>Rejected by hiring manager</fullName>
                <isActive>false</isActive>
                <label>Rejected by hiring manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>