force-app/main/default/objects/Application__c/fields/Vendor_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_contact_email__c</fullName>
    <label>Vendor contact email</label>
    <type>Email</type>
</CustomField>