force-app/main/default/objects/Application__c/fields/Vendor_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_contact_phone__c</fullName>
    <label>Vendor contact phone</label>
    <type>Phone</type>
</CustomField>