force-app/main/default/objects/Application__c/fields/Vendor_name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_name__c</fullName>
    <label>Vendor name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>