force-app/main/default/objects/Application__c/listViews/Aspen_hiring_desk_Application.listView-meta.xml
<ListView>
    <fullName>Aspen_hiring_desk_Application</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Aspen hiring desk</label>
    <queue>Aspen_hiring_desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>