force-app/main/default/objects/Application__c/listViews/Mijn_eigen_inschrijvingen.listView-meta.xml
<ListView>
    <fullName>Mijn_eigen_inschrijvingen</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Candidate__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Mijn eigen aanbiedingen</label>
    <sharedTo>
        <portalRoleAndSubordinates>VendoraccountCustomerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>